--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -13,10 +13,10 @@
 <table class="striped responsive-table highlight centered">
   <thead>
     <tr>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Edit</th>
-      <th>Delete</th>
+      <th>{{'company.code' | translate}}</th>
+      <th>{{'company.name' | translate}}</th>
+      <th>{{'company.edit' | translate}}</th>
+      <th>{{'company.delete' | translate}}</th>
     </tr>
   </thead>
 
