--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
   <div class="nav-wrapper white">
     <form>
       <div class="input-field">
@@ -45,4 +45,30 @@
 <div class="fixed-action-btn">
   <a class="btn-floating btn-large waves-effect waves-light green lighten-1" (click)="onAddButtonClick();">
     <i class="large material-icons">add</i></a>
+</div>
+ -->
+
+<div class="row">
+  <div class="col s12 m4" *ngFor="let item of userData">
+    <div class="card">
+      <div class="card-image">
+        <img [src]="imgUrl+item._id">
+        <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="onEditButtonClick(item._id)">
+          <i class="material-icons">edit</i></a>
+      </div>
+      <div class="card-content">
+        <span class="card-title">{{item.firstName}} {{item.lastName}}</span>
+        <p>{{item.mobile}}</p>
+        <p>{{item.email}}</p>
+      </div>
+      <div class="card-action">
+        <a (click)="onDeleteClick(item._id)"><i class="material-icons left">delete</i>Remove</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red" (click)="onAddButtonClick()">
+        <i class="large material-icons">add</i>
+      </a>
 </div>
